# sti-hackathon-backend

./: Cargo.toml
src/: main.rs
