[package]
name = "sti-hackathon-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
arguments = "0.7.1"
postgres = "0.19.5"
num-bigint = { version = "0.4.0", features = ["rand"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-postgres = "0.7.8"
tokio = "1.28.2"
